<resources>
    <string name="app_name">Mohaddis</string>


    <string name="ahadees">احادیث</string>
    <string name="abwab">ابواب</string>
    <string name="kutub">کتب</string>
    <string name="masada">احادیث</string>

    <string-array name="langList">
        <item>اردو</item>
        <item>عربی</item>
    </string-array>

    <string-array name="searchList">
        <item>احادیث میں تلاش کریں</item>
        <item>کتب میں تلاش کریں</item>
        <item>موضوعات میں تلاش کریں</item>
        <item>ابواب میں تلاش کریں</item>
    </string-array>

    <string name="book1">صحيح البخاري</string>
    <string name="book2">صحيح مسلم</string>
    <string name="book3">سنن أبي داؤد</string>
    <string name="book4">جامع الترمذي</string>
    <string name="book5">سنن النسائي</string>
    <string name="book6">سنن ابن ماجه</string>


    <string name="d_search_button_text">تلاش کریں</string>
    <string name="masadir_button_text">کتابیں</string>
    <string name="search_field_hint">ٹائپ کری</string>

    <string name="app_name_urdu">محدث</string>
    <string name="title_activity_settings">Settings</string>
    <string name="tab_text_3">التراقيم</string>
    <string name="tab_text_2">التراجم</string>
    <string name="tab_text_1">الحکم علی الحدیث</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="properties">معزز قارئین کرام ۔۔!\n ہماری تمام ویب سائٹس(محدث ، محدث لائبریری، محدث فتویٰ،محدث فورم، محدث میگزین) اسلامک ویلفیئر ٹرسٹ کے زیر اہتمام قائم معروف تحقیقی ریسرچ سنٹر مجلس التحقیق الاسلامی کی عمارت میں چل رہی ہیں۔ جس کا ہیڈ آفس99۔جے ماڈل ٹاؤن، لاہور میں قائم ہے۔ٹرسٹ کے زیر اہتمام متعدد علمی، تحقیقی اور رفاہی ادارے کام کر رہے ہیں۔ اس شعبے کے نگران ڈاکٹرحافظ انس نضر صاحب، جبکہ انتظامی ذمہ دار قاری محمد مصطفی راسخ صاحب ہیں۔اس وقت مجلس التحقیق الاسلامی کی عمارت میں موجود پرشکوہ لائبریری کے ساتھ ساتھ پانچ مختلف ویب سائٹس آن لائن ہیں، جن کی تفصیل درج ذیل ہے: </string>

</resources>
