<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar13"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:background="@drawable/rectangle_798"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:padding="5dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_done_black_24dp" />

            <TextView
                android:id="@+id/toolbartitlek"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="13.3sp"
                android:text="منتخب کریں"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:fontFamily="@font/urdu_font_family"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imageView16"
                app:layout_constraintStart_toEndOf="@+id/imageView43"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="17dp"
                android:layout_marginRight="17dp"
                android:layout_marginBottom="8dp"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/group_38" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar13"
        app:layout_constraintVertical_bias="0.0">

        <CheckBox
            android:id="@+id/checkBoxball"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="تمام کتب"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/urdu_font" />

        <CheckBox
            android:id="@+id/checkBoxb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/book1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/arabic_font" />

        <CheckBox
            android:id="@+id/checkBoxb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/book2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/urdu_font_family" />

        <CheckBox
            android:id="@+id/checkBoxb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/book3"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/arabic_font" />

        <CheckBox
            android:id="@+id/checkBoxb4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/book4"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/arabic_font" />

        <CheckBox
            android:id="@+id/checkBoxb5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/book5"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/arabic_font" />

        <CheckBox
            android:id="@+id/checkBoxb6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:text="@string/book6"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/arabic_font" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>